Handling runner container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,17 @@ services:
       - "5000:5000"
     volumes:
       - ${EXPLOITS_DIR}:/exploits:rw
+      - ${DATABASE_DIR}:/database:rw
   redis:
     image: redis:7.2.0-alpine
     restart: unless-stopped
     command: [ "redis-server", "--appendonly", "yes" ]
     ports:
       - "6379:6379"
+  runner:
+    build:
+      context: runner
+    image: thorium-runner:latest
+    volumes:
+      - ${EXPLOITS_DIR}:/exploits:rw
+      - ${DATABASE_DIR}:/database:rw
