Adding submission config

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 EXPLOITS_DIR=./shared/exploits
 DATABASE_DIR=./shared/database
+STATS_DIR=./shared/stats
 FLAG_REGEX=flag{[0-9a-f]{32}}
 TICK_LENGTH_SECONDS=60
