--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -2,8 +2,9 @@ FROM python:3.11-slim-buster
 
 WORKDIR app
 
+COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 COPY . .
+RUN apt-get update && apt-get install -y supervisor
 RUN pip3 install -r requirements.txt
 
-
-CMD python3 -u main.py
+CMD ["/usr/bin/supervisord"]
