--- a/submission/supervisord.conf
+++ b/submission/supervisord.conf
@@ -11,7 +11,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:celery]
-command=celery -A tasks worker --loglevel=warning
+command=celery -A tasks worker --loglevel=info
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
