Adding batch checks for submission

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DATABASE_DIR=./shared/database
 STATS_DIR=./shared/stats
 FLAG_REGEX=\w{31}=
 TICK_LENGTH_SECONDS=10
+BATCH_NUM_SECONDS=0
+BATCH_NUM_TOTAL=0
